--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --env development",
+    "start": "webpack-dev-server --hot --env development",
     "build": "webpack"
   },
   "repository": {
@@ -28,9 +28,11 @@
     "optimize-js-plugin": "0.0.4",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-hot-loader": "^4.3.6",
     "style-loader": "^0.23.0",
     "webpack": "^4.17.2",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   },
   "dependencies": {
     "uuid": "^3.3.2"
